--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@ body {
 
 .card {
   display: inline-block;
-  max-width: 600px;
+  width: 600px;
   border: 1px solid #ebeef5;
   border-radius: 6px;
   overflow: hidden;
