--- a/src/index.scss
+++ b/src/index.scss
@@ -5,12 +5,12 @@ body {
 .card {
   display: inline-block;
   align-items: center;
-  max-width: 1000px;
+  max-width: 800px;
   border: 1px solid #ebeef5;
   border-radius: 6px;
   overflow: hidden;
   transition: 0.3s ease;
-  margin: 2rem 2rem;
+  margin: 2rem auto;
 
   &:hover {
     box-shadow: 1px 1px 12px 0 #0000001F;
@@ -66,7 +66,7 @@ body {
 }
 
 .echarts {
-  width: 800px;
+  width: 600px;
   max-width: 100%;
   margin: 0 auto;
 }
