--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,11 @@ body {
   padding-top: 1rem;
  }
 
+.padding_for_server_info {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+ }
+
 .monitor_card {
   display: inline-block;
   max-width: 1000px;
