--- a/src/index.scss
+++ b/src/index.scss
@@ -75,3 +75,17 @@ body {
   max-width: 100%;
   margin: 0 auto;
 }
+
+.danmaku_count {
+  display: inline-block;
+  //align-items: center;
+  //max-width: 800px;
+  border: 1px solid #ebeef5;
+  border-radius: 6px;
+  overflow: hidden;
+  transition: 0.3s ease;
+  //margin: 2rem auto;
+  &:hover {
+    box-shadow: 1px 1px 12px 0 #0000001F;
+  }
+}
