--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@ body {
 
 .card {
   display: inline-block;
-  align-items: center;
+  //align-items: center;
   max-width: 800px;
   border: 1px solid #ebeef5;
   border-radius: 6px;
@@ -23,6 +23,17 @@ body {
     padding: 1rem 0;
     margin: 0;
     border-bottom: 1px solid #ebeef5;
+    box-sizing: border-box;
+  }
+
+  h3 {
+    font-weight: bold;
+    font-size: 1.4rem;
+    width: 100%;
+    padding: 1rem 0;
+    padding-left: 3rem;
+    margin: 0;
+    //border-bottom: 1px solid #ebeef5;
     box-sizing: border-box;
   }
 
